fix: gradient clip, navbar overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -166,6 +166,7 @@
   html {
     @apply bg-background text-foreground;
     width: 100%;
+    overflow-x: clip;
   }
   body {
     overflow-x: hidden;
